--- a/README
+++ b/README
@@ -1,1 +1,1 @@
-hello world! i added this on github, and now i'll try and pull it to my local machine.
+Hello World! I added this on github, and now I'll try and pull it to my local machine. Yay!
